# kie-integrations

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json
assets/documents/invoice/: .~lock.Invoice_Report.xlsx#  Invoice_Report.xlsx
assets/schemas/: 1099DIV_schema.json  1099INT_schema.json  cms1500_schema.json
claude-plugin/: README.md
claude-plugin/.claude-plugin/: marketplace.json
claude-plugin/doc-extractor/.claude-plugin/: plugin.json
claude-plugin/doc-extractor/skills/extract/scripts/: extract.py
claude-plugins/doc-extractor/: .mcp.json
claude-plugins/doc-extractor/.claude-plugin/: plugin.json
claude-plugins/doc-extractor/scripts/: mcp-server.py
claude-plugins/doc-extractor/skills/extract/: SKILL.md
claude-skill/: README.md  SKILL.md
claude-skill/references/: example_schemas.md
claude-skill/scripts/: extract.py
custom-gpt/: README.md  openapi.yaml  privacy.html  system_prompt.md
examples/schemas/: 1040_schema.json  URLA1003_schema.json  invoice_schema.json
examples/scripts/: run_extraction.sh
kie-core/: README.md  pyproject.toml
kie-core/src/kie_core/: __init__.py  client.py  document.py  schema.py
kie-core/tests/: conftest.py  test_client.py  test_document.py  test_schema.py
langchain-tool/: README.md  pyproject.toml
langchain-tool/src/kie_langchain/: __init__.py  tool.py
langchain-tool/tests/: conftest.py  test_tool.py
mcp-server/: README.md  pyproject.toml  start.sh
mcp-server/src/kie_mcp_server/: __init__.py  __main__.py  server.py
mcp-server/tests/: conftest.py  test_server.py
openai-function/: README.md  pyproject.toml
openai-function/src/kie_openai/: __init__.py  function_def.py  handler.py
openai-function/tests/: conftest.py  test_function.py
