[project]
name = "kie-langchain"
version = "0.1.0"
description = "LangChain tool wrapper for KIE document extraction"
requires-python = ">=3.10"
dependencies = [
    "kie-core",
    "langchain-core>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
kie-core = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
